--- a/ecs/index.html
+++ b/ecs/index.html
@@ -15,9 +15,18 @@
   <div class="nav">
     <h3><a href="index.html">Home</a> | <a href="ecs/index.html">ECS</a> | 2 | 3</h3>
   </div>
-  <div class="content">Hello World!</div>
+  <div class="content"> WASSSSSSSSSSSSUP</div>
   <div class="footer">
     <h4>About Me | Contact | Copyright 2021</h4>
+	  <head>
+      <title>HTML Backgorund Color</title>
+   </head>
+   <body style="background-color:blue;">
+      <h1>Subject:</h1>
+      <p>This is the portfolio for theo Mowdood's Exploring computer science</p>
+	 
+   </body>
+
   </div>
 </div>
 </body>
