--- a/index.html
+++ b/index.html
@@ -16,19 +16,11 @@
   </div>
   <div class="content">Hello World!</div>
   <div class="footer">
-    <h4>About Me | Contact | Copyright 2021</h4>
+	  <h4><a href="about.me">About Me</a> | Contact | Copyright 2021</h4>
   </div>
 </div>
 </body>
-	<h1>The input element</h1>
 
-<form action="/action_page.php">
-  <label for="fname">First name:</label>
-  <input type="text" id="fname" name="fname"><br><br>
-  <label for="lname">Last name:</label>
-  <input type="text" id="lname" name="lname"><br><br>
-  <input type="submit" value="Submit">
-</form>
 
 <p>Click the "Submit" button and the form-data will be sent to a page on the 
 server called "action_page.php".</p>
