--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <div class="nav">
     <h3><a href="index.html">Home</a> | <a href="ecs/index.html">ECS</a> | <h3><a href="about.me">Home</a> | 3</h3>
   </div>
-  <div class="content">Hello World!</div>
+  <div class="content">Hi </div>
   <div class="footer">
 	  <h4><a href="about.me">About Me</a> | Contact | Copyright 2021</h4>
   </div>
