--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<link href="myCSS.css" rel="stylesheet" type="text/css">
 </head>
 <body>
-	<img src="img_chania.jpg" alt="Flowers in Chania">
+	<img src="shroud.jpeg" alt="shroud is da best">
 <div class="container">
   <div class="header">
   	<h1>ECS Portfolio</h1>
