--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
   <div class="header">
   	<h1>ECS Portfolio</h1>
   </div>
+	<h2> typing results 
+		
+		</h2>
+		
   <div class="nav">
     <h3><a href="index.html">Home</a> | <a href="ecs/index.html">ECS</a> | <h3><a href="about.me">Home</a> | 3</h3>
   </div>
