--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <div class="header">
   	<h1>ECS Portfolio</h1>
   </div>
-	<h2> typing results 
+	<h2> typing results <img src="Screenshot 2022-03-16 8.12.18 AM.png" alt="pretty fast if i do say so myself">
 		
 		</h2>
 		
@@ -22,6 +22,8 @@
   <div class="content">Hi </div>
   <div class="footer">
 	  <h4><a href="about.me">About Me</a> | Contact | Copyright 2021</h4>
+	  <h5> AI project</h5>
+	  <h6> Code project </h6>
   </div>
 </div>
 </body>
